Bug 53148 - UI: Stock MOVE cursor is not being used
Summary: UI: Stock MOVE cursor is not being used
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other Windows (All)
: medium normal
Assignee: Rimas Kudelis (only watching bugs where I'm in CC list)
URL:
Whiteboard: target:4.5.0
Keywords:
Depends on:
Blocks:
 
Reported: 2012-08-06 05:34 UTC by Rimas Kudelis (only watching bugs where I'm in CC list)
Modified: 2015-06-23 11:45 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Screenshot (40.29 KB, image/png)
2012-08-06 05:34 UTC, Rimas Kudelis (only watching bugs where I'm in CC list)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rimas Kudelis (only watching bugs where I'm in CC list) 2012-08-06 05:34:11 UTC
Created attachment 65148 [details]
Screenshot

The move cursor from Windows theme is not being when moving. Instead, LibO seems to provide a similar image of its own (which of course is not as aesthetically pleasing as the one from Aero theme).

Check out the screenshot. Windows does not leave the mouse cursor in screenshots, so I had to paste another one from the web, but it's close enough to what we have and serves well for comparison.
Comment 1 Rimas Kudelis (only watching bugs where I'm in CC list) 2012-08-06 05:43:24 UTC
Err, sorry, the first sentence meant to say this:

The move cursor from Windows theme is not being used when moving objects.
Comment 2 Hashem Masoud 2012-10-06 08:08:48 UTC
What I know is that taking a screenshot excludes (removes) the mouse pointer. Screenshot taking is a utility in the Operating system, not in the application (in our case Libreoffice).
Comment 3 Rimas Kudelis (only watching bugs where I'm in CC list) 2012-10-07 12:26:12 UTC
(In reply to comment #2)
> What I know is that taking a screenshot excludes (removes) the mouse
> pointer. Screenshot taking is a utility in the Operating system, not in the
> application (in our case Libreoffice).

I don't even know what to reply to this. I think you misread what I am reporting.

I am NOT reporting that cursors are being removed from the screenshots. What I'm reporting is that LibreOffice uses its own Move cursor instead of using one provided by Windows.
Comment 4 QA Administrators 2015-01-05 17:52:39 UTC
** Please read this message in its entirety before responding **

To make sure we're focusing on the bugs that affect our users today, LibreOffice QA is asking bug reporters and confirmers to retest open, confirmed bugs which have not been touched for over a year.

There have been thousands of bug fixes and commits since anyone checked on this bug report. During that time, it's possible that the bug has been fixed, or the details of the problem have changed. We'd really appreciate your help in getting confirmation that the bug is still present.

If you have time, please do the following:

Test to see if the bug is still present on a currently supported version of LibreOffice (4.3.5 or later): https://www.libreoffice.org/download/

If the bug is present, please leave a comment that includes the version of LibreOffice and your operating system, and any changes you see in the bug behavior

If the bug is NOT present, please set the bug's Status field to RESOLVED-WORKSFORME and leave a short comment that includes your version of LibreOffice and Operating System

Please DO NOT

Update the version field
Reply via email (please reply directly on the bug tracker)
Set the bug's Status field to RESOLVED - FIXED (this status has a particular meaning that is not appropriate in this case)

Thank you for your help!

-- The LibreOffice QA Team
Comment 5 Rimas Kudelis (only watching bugs where I'm in CC list) 2015-01-05 20:37:45 UTC
Confirming that the issue still exists in LibO 4.3.5/Windows. Note that although the OS is set to All in this bug report, I can't remember offhand whether this issue exists in non-windows operating systems. It could be that it is Windows-specific, much like bug 53151 is.
Comment 6 Commit Notification 2015-01-08 09:47:43 UTC
Rimas Kudelis committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2abbc6fa577565376910a1b8e5e8931a2202e989

Windows cursor improvements. Fixes fdo#53148 and fdo#53151.

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Mike §chinagl 2015-05-21 16:17:53 UTC
This bug fix is mentioned in the release notes of the coming LibreOffice 5.0 (see release notes https://wiki.documentfoundation.org/ReleaseNotes/5.0). Therefore it would be wonderful if this feature really worked well, otherwise it should not be mentioned in the release notes. In the notes it reads:

Many hardcoded cursors, drawn back in the StarOffice era to support now-obsolete Windows versions, were dropped in favor of native cursors, which have a more modern look. tdf#53148 tdf#53151 (Rimas Kudelis)
Comment 8 Rimas Kudelis (only watching bugs where I'm in CC list) 2015-05-21 19:49:05 UTC
(In reply to Mike §chinagl from comment #7)
> This bug fix is mentioned in the release notes of the coming LibreOffice 5.0
> (see release notes https://wiki.documentfoundation.org/ReleaseNotes/5.0).
> Therefore it would be wonderful if this feature really worked well,
> otherwise it should not be mentioned in the release notes. 

Are you saying it doesn't work well, or was this just an automated message that can be safely ignored?
Comment 9 Maxim Monastirsky 2015-06-23 11:45:50 UTC
(In reply to Rimas Kudelis from comment #8)
> Are you saying it doesn't work well, or was this just an automated message
> that can be safely ignored?
Hi Rimas Kudelis,

There are indeed some issues with the cursors under Windows right now - see Bug 91485. Can you look at that please? Thanks.