Windows cursor improvements. Fixes fdo#53148 and fdo#53151.

* Use stock Windows cursors where possible.

Change-Id: Ic5bb308441ad7faf30f6340299653251c99f1cc0
Reviewed-on: https://gerrit.libreoffice.org/13780
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>