vcl/WinResTarget_vcl.mk
@@ -60,33 +60,26 @@ $(eval $(call gb_WinResTarget_add_dependencies,vcl/salsrc,\
     vcl/win/source/src/tblselse.cur \
     vcl/win/source/src/asns.cur \
     vcl/win/source/src/crop.cur \
-    vcl/win/source/src/neswsize.cur \
     vcl/win/source/src/tblselsw.cur \
     vcl/win/source/src/asnswe.cur \
-    vcl/win/source/src/cross.cur \
     vcl/win/source/src/hshear.cur \
-    vcl/win/source/src/notallow.cur \
     vcl/win/source/src/tblselw.cur \
     vcl/win/source/src/asnw.cur \
     vcl/win/source/src/darc.cur \
-    vcl/win/source/src/hsize.cur \
     vcl/win/source/src/nullptr.cur \
     vcl/win/source/src/timemove.cur \
     vcl/win/source/src/ass.cur \
     vcl/win/source/src/dbezier.cur \
     vcl/win/source/src/hsizebar.cur \
-    vcl/win/source/src/nwsesize.cur \
     vcl/win/source/src/timesize.cur \
     vcl/win/source/src/asse.cur \
     vcl/win/source/src/dcapt.cur \
     vcl/win/source/src/hsplit.cur \
-    vcl/win/source/src/pen.cur \
     vcl/win/source/src/vshear.cur \
     vcl/win/source/src/assw.cur \
     vcl/win/source/src/dcirccut.cur \
     vcl/win/source/src/linkdata.cur \
     vcl/win/source/src/pivotcol.cur \
-    vcl/win/source/src/vsize.cur \
     vcl/win/source/src/asw.cur \
     vcl/win/source/src/dconnect.cur \
     vcl/win/source/src/linkf.cur \
@@ -104,12 +97,10 @@ $(eval $(call gb_WinResTarget_add_dependencies,vcl/salsrc,\
     vcl/win/source/src/vtext.cur \
     vcl/win/source/src/chainnot.cur \
     vcl/win/source/src/dfree.cur \
-    vcl/win/source/src/move.cur \
     vcl/win/source/src/pntbrsh.cur \
     vcl/win/source/src/chart.cur \
     vcl/win/source/src/dline.cur \
     vcl/win/source/src/movebw.cur \
-    vcl/win/source/src/refhand.cur \
 ))
 
 # vim: set noet sw=4 ts=4:
